# DynaSense

Arduino/5X_eflesh_stream/: 5X_eflesh_stream.ino
Python/: arduino_python_interface.py  contact_visualization_serial.py  contact_visualization_udp.py  contact_visualization_udp_esp_hotspot.py  replay_data.py  simple_udp_receiver.py  udp_viewer_settings.yaml
Python/collected_data/: udp_capture_20260617_163706.csv  udp_capture_20260617_163757.csv  udp_capture_20260617_164538.csv  udp_capture_20260617_171927.csv  udp_capture_20260617_172040.csv  udp_capture_20260618_125931.csv  udp_capture_20260620_205337.csv  udp_capture_20260620_205638.csv  udp_capture_20260620_205722.csv  udp_capture_20260620_205807.csv  udp_capture_20260620_210704.csv  udp_capture_20260620_210911.csv  udp_capture_20260620_211343.csv  udp_capture_20260620_211458.csv  udp_capture_20260620_211750.csv  udp_capture_20260620_211816.csv  udp_capture_20260620_211839.csv  udp_capture_20260620_211904.csv  udp_capture_20260620_211936.csv  udp_capture_20260620_212057.csv
Python/collected_data/2026_03_26/: sensor_data_20260326_165159.csv
Python/collected_data/2026_03_27/: sensor_data_20260327_094218.csv  sensor_data_20260327_094234.csv  sensor_data_20260327_094618_walking.csv  sensor_data_20260327_105217.csv  (+1 more)
esp32_c6_zero_mini/MLX90393_readout_serial/: MLX90393.cpp  MLX90393_readout_serial.ino
esp32_c6_zero_mini/MLX90393_readout_udp/: MLX90393_readout_udp.ino
esp32_c6_zero_mini/MLX90393_readout_udp_esp_hotspot/: MLX90393_readout_udp_esp_hotspot.ino
ros1_udp_receiver/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
ros1_udp_receiver/catkin_ws/src/dynasense_udp_receiver_ros1/: CMakeLists.txt  package.xml
ros1_udp_receiver/catkin_ws/src/dynasense_udp_receiver_ros1/config/: udp_sensor_params.yaml
ros1_udp_receiver/catkin_ws/src/dynasense_udp_receiver_ros1/launch/: udp_sensor_node.launch
ros1_udp_receiver/catkin_ws/src/dynasense_udp_receiver_ros1/msg/: KneeVisMsg.msg
ros1_udp_receiver/catkin_ws/src/dynasense_udp_receiver_ros1/scripts/: udp_sensor_node.py
ros2_udp_receiver/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
ros2_udp_receiver/ros2_ws/src/dynasense_msgs/: CMakeLists.txt  package.xml
ros2_udp_receiver/ros2_ws/src/dynasense_udp_receiver/: package.xml  setup.cfg  setup.py
ros2_udp_receiver/ros2_ws/src/dynasense_udp_receiver/config/: udp_sensor_params.yaml
ros2_udp_receiver/ros2_ws/src/dynasense_udp_receiver/dynasense_udp_receiver/: udp_sensor_node.py  udp_sensor_subscriber.py
ros2_udp_receiver/ros2_ws/src/dynasense_udp_receiver/launch/: udp_sensor_node.launch.py
