<?xml version="1.0"?>
<package format="2">
  <name>dynasense_udp_receiver_ros1</name>
  <version>0.1.0</version>
  <description>ROS 1 Noetic UDP receiver for DynaSense packets.</description>

  <maintainer email="user@example.com">DynaSense User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
