<?xml version="1.0"?>
<package format="3">
  <name>dynasense_udp_receiver</name>
  <version>0.1.0</version>
  <description>ROS 2 UDP receiver for DynaSense ESP32 sensor packets.</description>
  <maintainer email="user@example.com">DynaSense User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>dynasense_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
